# planar

./: Cargo.toml  README.md
crates/planar-lsp/: Cargo.toml
crates/planar-lsp/src/: loader.rs  main.rs
crates/planarc/: Cargo.toml  build.rs
crates/planarc/src/: ast.rs  checked.rs  common.rs  compiler.rs  error.rs  lib.rs  loader.rs  module_loader.rs  pdl.rs  scope.rs  source_registry.rs  spanned.rs
crates/planarc/src/artifact/: builder.rs  header.rs  mod.rs  model.rs  reader.rs  writer.rs
crates/planarc/src/compiler/: error.rs  mod.rs
crates/planarc/src/db/: schema_builder.rs
crates/planarc/src/linker/: ast_linker.rs  dependency_graph.rs  error.rs  ids.rs  linked_ast.rs  linked_world.rs  linker.rs  lookup.rs  meta.rs  mod.rs  node_linker.rs  resolver.rs  symbol_table.rs
crates/planarc/src/lowering/: common.rs  ctx.rs  edge.rs  error.rs  extern_funcs.rs  facts.rs  grammar.rs  import.rs  mod.rs  module.rs  node.rs  query.rs  test_utils.rs  type_decl.rs
crates/planarc/src/snapshots/: planar_core__loader__tests__json_basic.snap  planar_core__loader__tests__yaml_basic.snap
crates/planarc/src/typechecker/: error.rs  meta.rs  mod.rs  typed_ast.rs
crates/planarc/src/validator/: error.rs  grammar_registry.rs  mod.rs  query_validator.rs  wit_validator.rs
crates/planarc/tree-sitter-pdl/: Cargo.toml  grammar.js  package-lock.json  package.json  tree-sitter.json
crates/planarc/tree-sitter-pdl/queries/: highlights.scm  injections.scm
crates/planarc/tree-sitter-pdl/src/: grammar.json  node-types.json  parser.c
crates/planarc/tree-sitter-pdl/test/: nginx-includes.pdl
(+68 files in other folders)
