[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.dependencies]
planar-config-macro = { path = "crates/planar-config-macro" }
planarc = { path = "crates/planarc" }
tree-sitter = { version = "0.26.3" }
insta = { version = "1.46.0", features = ["json"] }
miette = { version = "7.6.0", features = ["fancy", "serde"] }
kdl = "6.5.0"
thiserror = "2.0.17"
dirs = "6.0.0"
anyhow = "1.0" 