[package]
name = "planar-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
planarc = { workspace = true }
planar-pkg = { workspace = true }
tokio = { workspace = true }
tower-lsp = "0.20"
tree-sitter = { workspace = true }
tree-sitter-planardl = { workspace = true }
dashmap = "6.1.0"
anyhow = { workspace = true }
miette = { workspace = true }

